--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,11 @@
 {% block body %}
 <div class="mb-3">
   <div class="form-group">
+    <p>Returns the profit for 1 journal in the chosen city and happiness %</p>
+    <p>Uses the calculation: labourer material returns + empty journal - full journal</p>
+    <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown below after selling on the market</p>
+    <p>Prices provided by the Albion Data Project</p>
+    <p>NEWBY is recruiting</p>
     <form action="/" method="post">
     	</p>
     	<p>
