Added more detail and some line breaks
City and happiness definitions, plus linebreaks

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,11 +39,16 @@
 {% block body %}
 <div class="mb-3">
   <div class="form-group">
-    <p>Returns the profit for 1 journal in the chosen city and happiness %</p>
+    <p>Returns the profit for 1 journal</p>
+    <p>City: Assumes full journals and the labourer output materials and empty journal are sold on the selected city market
+    <p>Happiness: The labourer happiness, this is a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
+    <p></p>
     <p>Uses the calculation: labourer material returns + empty journal - full journal</p>
     <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown below after selling on the market</p>
+    <p></p>
     <p>Prices provided by the Albion Data Project</p>
     <p>NEWBY is recruiting</p>
+    <p></p>
     <form action="/" method="post">
     	</p>
     	<p>
