--- a/templates/home.html
+++ b/templates/home.html
@@ -39,10 +39,10 @@
 {% block body %}
 <div class="mb-3">
   <div class="form-group">
-    <p>Returns the profit for 1 journal. Uses the calculation: labourer material returns + empty journal - full journal</p>
+    <p>Returns the profit for 1 journal. Uses the calculation: labourer material output prices + empty journal price - full journal price</p>
     <p>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.</p>
-    <p>Happiness: The labourer happiness, this is a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
-    <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown below after selling on the market.</p>
+    <p>Happiness: The labourer happiness, this acts as a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
+    <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown after selling their labourer's output on the market.</p>
     <p>Prices provided by the Albion Data Project.</p>
     <p>NEWBY is recruiting</p>
     <p></p>
