moved the {{entry}}
the {{entry}} for showing the city/happiness values for the currently shown table were moved up to under the submit button.

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,6 +68,7 @@
 <!--    	<button class="btn btn-primary" onclick="do_ajax();">Request profit</button> -->
     <p><input type="submit"></p>
   </form>
+  <p>Results shown for {{entry}}</p>
 
 <!--    <p>{{profit}}</p> -->
 <!--     <div id="city"></div> -->
@@ -97,7 +98,5 @@
   </tr>
   {% endfor %}
 </table>
-
-<p>{{entry}}</p>
 
 {% endblock %}
