--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,7 @@
     <p>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.</p>
     <p>Happiness: The labourer happiness, this acts as a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
     <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown after selling their labourer's output on the market.</p>
+    <p>A value of "N/A" is shown when one of the journals or materials for that journal has no current price on the city market.</p>
     <p>Prices provided by the Albion Data Project.</p>
     <p>NEWBY is recruiting</p>
     <p></p>
