added style .center

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,16 @@
 
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk "crossorigin="anonymous">
-
+	
+	<style>
+	.center {
+	  margin: auto;
+	  width: 60%;
+	  border: 3px solid #73AD21;
+	  padding: 10px;
+	}
+	</style>
+	
 	<title>{% block title%}{% endblock %}</title>
 
 	{% block script %}{% endblock %}
