moved whole thing to class .center

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,8 +37,8 @@
 {% endblock %}
 
 {% block body %}
-<div class="mb-3">
-  <div class="form-group">
+<div class="center">
+  <div>
     <p>Returns the profit for 1 journal. Uses the calculation: labourer material output prices + empty journal price - full journal price</p>
     <p>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.</p>
     <p>Happiness: The labourer happiness, this acts as a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
@@ -47,6 +47,9 @@
     <p>Prices provided by the Albion Data Project.</p>
     <p>NEWBY is recruiting</p>
     <p></p>
+  </div>
+  <div class="form-group">
+
     <form action="/" method="post">
     	</p>
     	<p>
