added .center to title and table as well

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+<div class="center">
 {% block title %}AO Labourer tool{% endblock %}
+</div>
 
 {% block header %}
 <h1>Albion Online labourer profits per journal</h1>
@@ -79,7 +81,7 @@
 
   </div>
 </div>
-
+<div class="center">
 <table>
   <tr>
     <td>Tier 3</td>
@@ -102,5 +104,6 @@
   </tr>
   {% endfor %}
 </table>
+</div>
 
 {% endblock %}
