format, "+" explanation in table
changed paragraph formatting, added explanation for the "+" after a profit in the table

--- a/templates/profits.html
+++ b/templates/profits.html
@@ -41,11 +41,14 @@
       </div>
     </div>
     <div class="col-sm-7">
-      <p>Returns the profit for 1 journal. Uses the calculation: labourer material output prices + empty journal price - full journal price</p>
-      <p>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.</p>
-      <p>Happiness: The labourer happiness, this acts as a multiplier for their material output. Labourers can only work between 50 and 150% happiness.</p>
-      <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown after selling their labourer's output on the market.</p>
-      <p>A value of "N/A" is shown when one of the journals or materials for that journal has no current price on the city market.</p>
+      <p>Returns the profit for 1 journal. Uses the calculation: labourer material output prices + empty journal price - full journal price
+      <br>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.
+      <br>Happiness: The labourer happiness, this acts as a multiplier for their material output. Labourers can only work between 50 and 150% happiness.
+      </p>
+      <p>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown after selling their labourer's output on the market.
+      <br>A value of "N/A" is shown when one of the journals or materials for that journal has no current price on the city market.
+      <br>A "+" after the profit indicates market data for one or more enchanted materials from this labourer is unavailable, and the actual profit will be slightly higher.
+      </p>
       <p>Prices provided by the Albion Data Project.</p>
       <p>NEWBY is recruiting</p>
       <p></p>
