--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 				</nav>
 			</div>
 		</div>
-		{% block header%}{% endblock %}
+		<!-- {% block header%}{% endblock %}-->
 		{% block body%}{% endblock %}	
 		<p></p>
 		<div class="container">
