fisherman and averaging

--- a/templates/happiness.html
+++ b/templates/happiness.html
@@ -25,6 +25,7 @@
             <option value="Lymhurst">Lymhurst</option>
             <option value="Martlock">Martlock</option>
             <option value="Thetford">Thetford</option>
+            <option value="All">Average all cities</option>
           </select>
         </div>
       </div>
@@ -58,6 +59,7 @@
       <p>Labourers cannot work journals higher than their own tier.
       <br>The sales include the premium tax of 4.5%, non-premium members can expect a lower profit than shown after selling their labourer's output on the market.
       <br>The cell is left blank if one of the journals or materials for that journal has no current price on the city market.
+      <br>"Average all cities" uses average current journal and material prices for the 6 royal cities.
       <br>A "+" after the profit indicates market data for one or more enchanted materials from this labourer is unavailable, and the actual profit will be slightly higher.
       </p>
       <p></p>
