--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,10 @@
 		<p></p>
 		<div class="container">
   			<div class="d-flex justify-content-center">
-  				<p>Prices provided by the <a href="https://www.albion-online-data.com/">Albion Data Project</a>. Newby is recruiting.</p>
+  				<p>Prices provided by the <a href="https://www.albion-online-data.com/">Albion Data Project</a>.
+				<br>This tool is dependent on the Albion Data Project for item market values,
+					but the data project has been under attack since May 2021 and is no longer functional. 
+				<br>To ease server burdens on the data project team this tool will be taken down. </p>
   			</div>
   		</div>
 	</main>
