--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,8 @@
   				<p>Prices provided by the <a href="https://www.albion-online-data.com/">Albion Data Project</a>.
 				<br>This tool is dependent on the Albion Data Project for item market values,
 					but the data project has been under attack since May 2021 and is no longer functional. 
-				<br>To ease server burdens on the data project team this tool will be taken down. </p>
+				<br>To ease server burdens on the data project team this tool will be taken down. 
+				<br>I would like to thank those who put time, effort and money into creating and maintain the data project. It is a great asset.</p>
   			</div>
   		</div>
 	</main>
