--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,7 @@
 		<p></p>
 		<div class="container">
   			<div class="d-flex justify-content-center">
-  				<p>Prices provided by the <a href="https://www.albion-online-data.com/">Albion Data Project</a>.<br>
-				If empty journal, full journal and returned material prices for a given journal (Such as T6 Tinker) are correct in a city, this website's output should be correct.<br>
-				To contact the author see the <a href=
-				"https://forum.albiononline.com/index.php/Thread/133666-Web-app-for-calculating-labourer-profits-released/?postID=1051196#post1191843/">
-				Albion online forum post for the site</a></p>
+  				<p>Prices provided by the <a href="https://www.albion-online-data.com/">Albion Data Project</a></p>
   			</div>
   		</div>
 	</main>
