--- a/templates/house.html
+++ b/templates/house.html
@@ -94,8 +94,7 @@
 	</div>
 	<div class="form-group row justify-content-md-center">
 		<div class="text-center col-sm-12 bg-secondary font-weight-light rounded">
-			<p>Click on a cell in the above table to see the prices and projected material returns used to calculate profit.</p>
-			<p>Reminder that the above table includes the 4.5% market sales tax and setup fee on labourer products</p>
+			<p>CLICK A TABLE CELL TO MANUALLY EDIT PRICES</p>
 		</div>
 	<div class="text-center col-sm-12 my-auto rounded bg-primary">
       <label class = "font-weight-light" id="price_title"></label>
