--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 <body class = "bg-dark text-white">
 	<main>
-		<div class = "form-group row bg-primary">
+<!-- 		<div class = "form-group row bg-primary">
 			<div class = "col-sm-3"></div>
 			<div class = "col-sm-6">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -23,14 +23,14 @@
 				  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				    <div class="navbar-nav my-auto">
 				      <a class="nav-item nav-link active h5 rounded bg-dark border border-info" href="/house">House Tier</a>
-				      <!--<label class = "my-auto h5" style = "padding-left: 15px;padding-right: 15px;">or</label>
-				      <a class="nav-item nav-link active h5 rounded bg-dark border border-info" href="/happiness">Happiness</a> -->
+				      <label class = "my-auto h5" style = "padding-left: 15px;padding-right: 15px;">or</label>
+				      <a class="nav-item nav-link active h5 rounded bg-dark border border-info" href="/happiness">Happiness</a>
 				    </div>
 				  </div>
 				</nav>
 			</div>
-		</div>
-		<!-- {% block header%}{% endblock %} -->
+		</div> -->
+		{% block header%}{% endblock %}
 
 		{% block body%}{% endblock %}	
 		<p></p>
