--- a/templates/house.html
+++ b/templates/house.html
@@ -13,12 +13,12 @@
 {% block body %}
 <div class="container" style = "padding-top: 10px;">
   <div class="form-group row">
-    <div class="col-sm-4 my-auto rounded bg-primary">
+    <div class="col-sm-4 my-auto rounded bg-info">
       <div class="form-group row" style = "padding-top: 20px;">
-        <label for="city" class="col-sm-4 col-form-label h5">City: </label>
+        <label for="city" class="col-sm-4 col-form-label h5">City Market: </label>
         <div class="col-sm-7">
           <select id="city" class="form-control" placeholder="Please select a city">
-            <option selected>Please select a city...</option>
+            <option selected value="unselected city">Please select a city...</option>
             <option value="Bridgewatch">Bridgewatch</option>
             <option value="Caerleon">Caerleon</option>
             <option value="Fort sterling">Fort Sterling</option>
@@ -29,11 +29,27 @@
           </select>
         </div>
       </div>
-      <div class="form-group row">
-        <label for="house" class="col-sm-4 col-form-label h5">House tier: </label>
+	  <form>
+		<p>Select to calculate profit using House Tier or Labourer Happiness</p>
+		<div class="form-check">
+		<label class="form-check-label" for="houseRadio">
+		<input class="form-check-input" type="radio" name="selectionRadios" id="houseRadio" value="houseOption" checked>	
+		House & Furniture Tier
+		</label>
+		</div>
+		<div class="form-check">
+		  <input class="form-check-input" type="radio" name="selectionRadios" id="happRadio" value="happOption">
+		  <label class="form-check-label" for="happRadio">
+			Labourer Happiness
+		  </label>
+		</div>
+		<br>
+	  </form>
+      <div class="form-group row" id="houseSelectDiv">
+        <label for="house" class="col-sm-4 col-form-label h5">House Tier: </label>
         <div class="col-sm-7">
-          <select id="house" class="form-control" placeholder="Please select a house tier">
-            <option selected>Please select a tier...</option>
+          <select id="houseSelect" class="form-control" placeholder="Please select a house tier">
+            <option selected value="unselected tier">Please select a tier...</option>
             <option value="T2">T2</option>
             <option value="T3">T3</option>
             <option value="T4">T4</option>
@@ -42,6 +58,12 @@
             <option value="T7">T7</option>
             <option value="T8">T8</option>
           </select>
+        </div>
+      </div>
+	  <div class="form-group row" id="happTextDiv">
+        <label for="happText" class="col-sm-4 col-form-label h5">Happiness: </label>
+        <div class="col-sm-7">
+          <input type="number" class="form-control" id="happText" placeholder="50% to 150%">
         </div>
       </div>
       <div class="form-group row">
@@ -64,13 +86,13 @@
       <p>Returns the profit for 1 journal. 
 	  <br>City: Selects the city market for buying the full journal and selling the labourer output materials and empty journal.
       <br>House tier: The tier of the house and furniture inside. Assumes all applicable trophies are used excluding sharks and spyglasses.
-	  <br>Uses the calculation: (labourer material output prices + empty journal price)*0.955 - full journal price
+	  </p>
+	  <p>Uses the calculation: (labourer material output prices + empty journal price)*0.955 - full journal price
 	  <br>The sales include the premium tax and setup fee of 4.5%, non-premium members can expect a slightly lower profit than shown.
       </p>
       <p>Labourers cannot work journals higher than their own tier.
       <br>"Average all cities" uses average current journal and material prices for the 6 royal cities.
       </p>
-      <p></p>
     </div>
   </div>
   <!-- <p>{{entry}}</p> -->
@@ -96,7 +118,7 @@
 		<div class="text-center col-sm-12 bg-secondary font-weight-light rounded">
 			<p>CLICK A TABLE CELL TO MANUALLY EDIT PRICES</p>
 		</div>
-	<div class="text-center col-sm-12 my-auto rounded bg-primary">
+	<div class="text-center col-sm-12 my-auto rounded bg-info">
       <label class = "font-weight-light" id="price_title"></label>
     </div>
 	<div class="row justify-content-around">
@@ -119,7 +141,7 @@
 				</div>
 			<div class="col-sm-1"></div>
 		</div>
-		<div class="text-center col-sm-3 my-auto rounded bg-primary">
+		<div class="text-center col-sm-3 my-auto rounded bg-info">
 		<label for="total_profit">Estimated Profit (After 4.5% tax):</label>
 		<label class = "font-weight-light" id="total_profit"></label>
 		</div>
@@ -140,13 +162,41 @@
     //This part takes the form IDs, assigns them to a variable, then packs the variables
     ///into the var "entry"
     var city = document.getElementById("city");
-    var house = document.getElementById("house");
-    var loading = "Loading results for " + city.value + " with " + house.value + " house and furniture."
-    var loaded = "Displaying results for " + city.value + " with " + house.value + " house and furniture."
-
+    var house = document.getElementById("houseSelect");
+	var happ = document.getElementById("happText");
+	
+	//Display to the user the inputs that were submitted, and the state of the query.
+	//If the house value is not the placeholder, then the user has entered a house tier query
+	if (house.value !="unselected tier"){
+		var loading = "Loading results for " + city.value + " with " + house.value + " house and furniture."
+		var loaded = "Displaying results for " + city.value + " with " + house.value + " house and furniture."
+	} else {
+		//if the house value is the placeholder, and the happines value is blank, then the user forgot to enter/pick an input and will NOT recieve a response.
+		if (happ.value == ""){
+			document.getElementById("loader").innerHTML = "Please enter a valid input"
+			$(function() {
+				$('#table').bootstrapTable('destroy')
+			});
+			return;
+		} else if (happ.value < 50 || happ.value > 150){
+			//If the happ value is not the placeholder, then the user has entered a happiness query
+			//If happiness is <50 or >150, the query is not valid and will NOT recieve a response.
+			document.getElementById("loader").innerHTML = "Please enter a happiness between 50 and 150%";
+			$(function() {
+				$('#table').bootstrapTable('destroy')
+			});
+			return;
+		} else {
+			//If happiness is between 50 < x < 150, the query is valid and will recieve a response
+			var loading = "Loading results for " + city.value + " with " + happ.value + "% labourer happiness."
+			var loaded = "Displaying results for " + city.value + " with " + happ.value + "% labourer happiness."
+		}
+	}
+	
     var entry = {
       city: city.value,
-      house: house.value
+      house: house.value,
+	  happ: happ.value
     };
 	
 	console.log(entry)
@@ -198,6 +248,8 @@
 
   }
 
+
+
 //On clicking a cell in "table", update "price_table" with LABOURER PRICEs for that LAB and TIER.
 $('#table').on('click-cell.bs.table', function ($element, field, value, row) {
 	//field = columns, row = row (Comes as a dictionary of cells in the row), value = cell value.
@@ -239,6 +291,9 @@ $('#table').on('click-cell.bs.table', function ($element, field, value, row) {
 	};
 });
 
+
+
+//When a price value in "price_table" is changed, update the sell value and profit
 document.getElementById("price_table").addEventListener("input", function() {
     //Updates the profit and sell values whenever prices are edited manually.
 	var profit = 0;
@@ -273,6 +328,47 @@ document.getElementById("price_table").addEventListener("input", function() {
 	document.getElementById("total_profit").innerHTML = Math.round(profit)
 }, false);
 
+
+
+//Allow the user to choose between HOUSE TIER and HAPPINESS
+$('input[type=radio][name=selectionRadios]').on('change', function() {
+  switch ($(this).val()) {
+    case 'houseOption':
+		//Show the House select input
+		$('#houseSelectDiv').show();
+		$('#houseSelect').attr('required', '');
+		$('#houseSelect').attr('data-error', 'This field is required.');
+		//Hide the Happ text input and clear the happ text field
+		$('#happTextDiv').hide();
+		$('#happText').removeAttr('required');
+		$('#happText').removeAttr('data-error');
+		$('#happText').val("");
+		console.log("House tier selected");
+      break;
+    case 'happOption':
+		//Show the Happ text input
+		$('#happTextDiv').show();
+		$('#happText').attr('required', '');
+		$('#happText').attr('data-error', 'This field is required.');
+		//Hide the House select input and set house value to placeholder
+		$('#houseSelectDiv').hide();
+		$('#houseSelect').removeAttr('required');
+		$('#houseSelect').removeAttr('data-error');
+		$('#houseSelect').val("unselected tier");
+		console.log("Labourer happiness selected");
+      break;
+  }
+});
+
+//Hide the happ radio option on page load. This sets house tier as the default option.
+  function load() {
+		$('#happTextDiv').hide();
+		$('#happText').removeAttr('required');
+		$('#happText').removeAttr('data-error');
+		$('#happText').val("");
+		console.log("House tier selected");
+  }
+window.onload = load;
 
 
 
